samples/_failures_safe/1761790049_b7ba6b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_872d6313.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_872d6313.c:160:21: error: expected identifier at end of input
  160 |                     if (new_dist > 0 && new_dist < dist[graph->edges[i].
      |                     ^~
./samples/SAFE/__tmp_872d6313.c:160:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_872d6313.c:160:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_872d6313.c:160:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_872d6313.c:160:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_872d6313.c:160:21: error: expected declaration or statement at end of input
